--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,19 @@
-/* Layout */
+/* Styles */
 
 body {
   padding-top: 70px;
-  background-color: tan;
+  background-color: grey;
+  font-family: tahoma;
+}
+
+/*.threep{
+
+}*/
+
+.navbar {
+  background-image: url("http://www.carbonfibergear.com/wp-content/uploads/2010/01/2-carbon-fiber-twill-weave-iphone-background.jpg");
+}
+
+.img-responsive{
+  margin-top: 15px;
 }
