--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 
 body {
   padding-top: 70px;
-  background-color: grey;
+  background: grey;
   font-family: tahoma;
 }
 
@@ -16,4 +16,14 @@ body {
 
 .img-responsive{
   margin-top: 15px;
+  border: solid 8px #4d4d4d;
+  border-radius: 10px;
+}
+
+.icon-bar{
+  background: grey;
+}
+
+ul li a {
+  color: grey;
 }
